Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.1
-
None
-
None
Description
IMPALA-1556 either exacerbated or caused a major leak in TSaslTransport's memory buffer, which constantly expands to hold all data that it has read without ever shrinking.
This only acutely affects Kerberos-secured clusters: LDAP clusters could see a similar problem but since only the client connection is secured the amount of data that has to be transferred to the cluster (the leak only happens on the cluster's read path) would have to be much larger than usual.